add exes files to .gitattributes to avoid CRLF changes

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@ lmfit/_version.py export-subst
 # Auto detect text files and perform LF normalization
 * text=auto eol=lf
 
+exes/* - text
+dlls/* - text
 *.nib -text
 *.jpg -text
 *.png -text
