--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto eol=lf
 
-exe/* -text
+exes/* -text
+exes/*/feff6l -text
 *.nib -text
 *.jpg -text
 *.png -text
