--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ install:
     - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy h5py matplotlib 
     - source activate test_env
     - conda config --add channels conda-forge
-    - conda config --add channels newville
-    - conda install h5py matplotlib pandas nose sphinx sqlalchemy
+    - conda config --add channels gsecars
+    - conda install h5py matplotlib pandas nose sphinx sqlalchemy patchelf libgfortran
     - conda install pillow requests yaml pango pcre
     - conda install wxpython wxmplot wxutils
-    - conda install lmfit termcolor pyepics fabio pyfai
+    - conda install lmfit termcolor pyepics fabio pyfai pycifrw
     - python setup.py install
 
 script:
