--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-six>=1.7
+six>=1.10
 scipy>=0.16
 numpy>=1.7
 matplotlib>=1.4.3
-sqlachemy>=0.8
+sqlachemy>=0.9
 h5py>=2.2
 pillow>=3.4
 requests>=2.1
-
+lmfit>=0.9.7
