--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,12 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy h5py matplotlib wxpython
+    - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy h5py matplotlib
     - source activate test_env
     - conda config --add channels gsecars
     - conda install h5py matplotlib pandas nose pytest sphinx sqlalchemy libgfortran
     - conda install pillow requests yaml pango pcre
-    - conda install wxmplot wxutils
+    - conda install -c gsecars wxpython wxmplot wxutils
     - conda install lmfit termcolor pyepics fabio pyfai pycifrw
     - python setup.py install
 
