--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 
 python:
     - 2.7
-    - 3.6
+##    - 3.6
 
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
@@ -17,7 +17,7 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy h5py matplotlib
+    - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy h5py matplotlib wxpython
     - source activate test_env
     - conda config --add channels gsecars
     - conda install h5py matplotlib pandas nose pytest sphinx sqlalchemy libgfortran
