--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
     - conda config --add channels gsecars
     - conda install h5py matplotlib pandas nose pytest sphinx sqlalchemy libgfortran
     - conda install pillow requests yaml pango pcre
-    - conda install -c gsecars wxpython wxmplot wxutils
+    - conda install wxmplot wxutils
     - conda install lmfit termcolor pyepics fabio pyfai pycifrw
     - python setup.py install
 
