updates for sphinx 1.6.3

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -9,10 +9,7 @@ BUILDDIR      = _build
 INSTALLDIR = ../downloads/
 
 # Internal variables.
-PAPEROPT_a4     = -D latex_paper_size=a4
-PAPEROPT_letter = -D latex_paper_size=letter
-PAPER           = letter
-ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(SPHINXOPTS) .
 
 .PHONY: help clean html dirhtml pickle json htmlhelp qthelp latex changes linkcheck doctest
 .PHONY: all install biblio
