--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 six>=1.10
 scipy>=0.17
-numpy>=1.7
-matplotlib>=1.5.1
+numpy>=1.10
+matplotlib>=2.0
 sqlalchemy>=0.9
-h5py>=2.2
+h5py>=2.4
 pillow>=3.4
 peakutils>=1.0.0
 requests>=2.1
 asteval>=0.9.12
 lmfit>=0.9.9
+uncertainties>=3.0
+pyyaml
 psutil
 termcolor
