--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -1,5 +1,5 @@
 name:  xraylarch
-version: 0.9.37
+version: 0.9.38
 
 channels:
     - http://repo.continuum.io/pkgs/main
@@ -8,7 +8,7 @@ channels:
     - https://conda.anaconda.org/gsecars/
 
 specs:
-    - python 2.7*
+    - python 3.6*
     - conda
     - pip
     - anaconda
@@ -29,8 +29,10 @@ specs:
     - pywin32 # [win64 or win32]
     - pcre
     - yaml
+    - pyyaml
     - requests
     - scikit-image
+    - scikit-learn
     - pycifrw
     - peakutils
     - psutil
@@ -41,10 +43,10 @@ specs:
     - wxpython=4.0.1
     - wxmplot=0.9.30
     - pyepics=3.3.1
-    - lmfit=0.9.9
+    - lmfit=0.9.11
     - asteval=0.9.12
     - wxutils=0.1.3
-    - xraylarch
+    - xraylarch=0.9.38
 
 
 post_install: post_install_linux.sh # [linux64]
