--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -1,5 +1,5 @@
 name:  xraylarch
-version: 0.9.39
+version: 0.9.40
 
 channels:
     - http://repo.continuum.io/pkgs/main
@@ -36,6 +36,7 @@ specs:
     - pycifrw
     - peakutils
     - psutil
+    - silx=0.8.0
     - fabio=0.6.0 # [linux64 or osx]
     - pyfai=0.15.0  # [linux64 or osx]
     - tomopy  # [linux64 or osx]
@@ -46,7 +47,7 @@ specs:
     - lmfit=0.9.11
     - asteval=0.9.12
     - wxutils=0.1.3
-    - xraylarch=0.9.39
+    - xraylarch=0.9.40
 
 
 post_install: post_install_linux.sh # [linux64]
