--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -18,6 +18,7 @@ specs:
     - scipy
     - pandas
     - h5py
+    - hdf5plugins
     - matplotlib
     - six
     - sqlalchemy
@@ -39,21 +40,18 @@ specs:
     - silx=0.8.0 # [linux64 or osx]
     - fabio=0.6.0 # [linux64 or osx]
     - pyfai=0.15.0  # [linux64 or osx]
-    - tomopy  # [linux64 or osx]
+    - tomopy>=1.1.4
     - tifffile=0.14.0
-    - wxpython=4.0.1
-    - wxmplot=0.9.30
-    - pyepics=3.3.1
-    - lmfit=0.9.11
-    - asteval=0.9.12
-    - wxutils=0.1.3
-    - xraylarch=0.9.40
+    - wxpython>=4.0.3
+    - wxmplot>=0.9.32
+    - pyepics>=3.3.3
+    - lmfit>=0.9.12
+    - asteval>=0.9.13
+    - wxutils>=0.2.3
+    - xraylarch=0.9.41rc1
 
+installer_type: pkg # [osx]
 
-post_install: post_install_linux.sh # [linux64]
-post_install: post_install_macosx.sh # [osx]
-post_install: post_install_windows.bat # [win]
-
-license_file: LICENSE
-
-welcome_image: larch_3cones.png          #        [win]
+# post_install: post_install_linux.sh # [linux64]
+# post_install: post_install_macosx.sh # [osx]
+# post_install: post_install_windows.bat # [win]
