--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -1,5 +1,5 @@
 name:  xraylarch
-version: 0.9.40
+version: 0.9.41rc1
 
 channels:
     - http://repo.continuum.io/pkgs/main
@@ -14,15 +14,16 @@ specs:
     - anaconda
     - console_shortcut # [win]
     - setuptools
-    - numpy
-    - scipy
+    - numpy>=1.15
+    - scipy>=1.0
     - pandas
     - h5py
+    - hdf5
     - hdf5plugins
-    - matplotlib
-    - six
+    - matplotlib>=3.0
+    - six>=1.10
     - sqlalchemy
-    - pillow
+    - pillow>=5.3
     - psycopg2
     - termcolor
     - fontconfig # [osx or linux64]
@@ -30,17 +31,17 @@ specs:
     - pywin32 # [win64 or win32]
     - pcre
     - yaml
-    - pyyaml
+    - pyyaml>=3.12
     - requests
     - scikit-image
     - scikit-learn
-    - pycifrw
+    - pycifrw>=4.3
     - peakutils
     - psutil
-    - silx=0.8.0 # [linux64 or osx]
-    - fabio=0.6.0 # [linux64 or osx]
-    - pyfai=0.15.0  # [linux64 or osx]
-    - tomopy>=1.1.4
+    - silx>=0.9
+    - fabio>=0.6
+    - pyfai
+    - tomopy>=1.3
     - tifffile=0.14.0
     - wxpython>=4.0.3
     - wxmplot>=0.9.32
@@ -48,10 +49,10 @@ specs:
     - lmfit>=0.9.12
     - asteval>=0.9.13
     - wxutils>=0.2.3
-    - xraylarch=0.9.41rc1
+    - xraylarch>=0.9.41rc1
 
 installer_type: pkg # [osx]
 
-# post_install: post_install_linux.sh # [linux64]
-# post_install: post_install_macosx.sh # [osx]
-# post_install: post_install_windows.bat # [win]
+post_install: post_install_linux.sh # [linux64]
+post_install: post_install_macosx.sh # [osx]
+post_install: post_install_windows.bat # [win]
