--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -8,7 +8,7 @@ channels:
     - https://conda.anaconda.org/gsecars/
 
 specs:
-    - python 3.6*
+    - python=3.6.8
     - conda
     - pip
     - anaconda
@@ -19,7 +19,6 @@ specs:
     - pandas
     - h5py
     - hdf5
-    - hdf5plugins
     - matplotlib>=3.0
     - six>=1.10
     - sqlalchemy
@@ -41,6 +40,7 @@ specs:
     - silx>=0.9
     - fabio>=0.6
     - pyfai
+    - dioptas
     - tomopy>=1.3
     - tifffile=0.14.0
     - wxpython>=4.0.3
@@ -51,7 +51,7 @@ specs:
     - wxutils>=0.2.3
     - xraylarch>=0.9.41rc1
 
-installer_type: pkg # [osx]
+installer_type: sh # [osx]
 
 post_install: post_install_linux.sh # [linux64]
 post_install: post_install_macosx.sh # [osx]
