--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
     - conda config --add channels gsecars
     - conda install h5py matplotlib pandas nose pytest sphinx sqlalchemy libgfortran
     - conda install pillow requests yaml pango pcre psutil peakutils
-    - conda install wxmplot wxutils
+    - conda install wxmplot wxutils uncertainties
     - conda install asteval lmfit termcolor pyepics fabio pyfai pycifrw pyshortcuts
     - python setup.py install
 
