--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,9 @@ install:
     - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy pip h5py matplotlib wxpython
     - source activate test_env
     - conda config --add channels gsecars
-    - conda install h5py matplotlib pandas nose pytest sphinx sqlalchemy libgfortran
-    - conda install pillow requests yaml pango pcre psutil peakutils
-    - conda install wxmplot wxutils uncertainties
-    - conda install asteval lmfit termcolor pyepics fabio pyfai pycifrw pyshortcuts
-    - pip install -r requirements.txt
+    - conda install six h5py matplotlib pandas nose pytest sphinx sqlalchemy psycopg2 libgfortran
+    - conda install pillow requests yaml pyyalm pango pcre psutil peakutils scikit-learn
+    - conda install wxmplot wxutils uncertainties asteval lmfit termcolor pyepics fabio pyfai pycifrw pyshortcuts
     - python setup.py install
 
 script:
