--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ install:
     - conda install six pandas nose sphinx sqlalchemy psycopg2 wxpython pip six h5py pytest
     - conda install pillow requests yaml pyyaml pango pcre psutil scikit-learn
     - conda config --add channels gsecars
-    - conda install -c gsecars wxmplot wxutils uncertainties asteval lmfit termcolor peakutils pyepics pycifrw pyshortcuts
+    - conda install -c gsecars uncertainties asteval lmfit=0.9.12 termcolor peakutils pyepics=3.3.3 pycifrw pyshortcuts
+    - conda install -c gsecars wxmplot=0.9.34 wxutils=0.2.3
     - python setup.py install
     - conda list
 
