--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 install:
     - conda create -q -n testlarch python=$TRAVIS_PYTHON_VERSION numpy scipy libgfortran matplotlib
     - source activate testlarch
-    - conda install six pandas nose sphinx sqlalchemy psycopg2 wxpython pip six h5py pytest
+    - conda install six pandas nose sphinx sqlalchemy psycopg2 wxpython pip six h5py pytest patchelf
     - conda install pillow requests yaml pyyaml pango pcre psutil scikit-learn
     - conda config --add channels gsecars
     - conda install -c gsecars uncertainties asteval lmfit=0.9.12 termcolor peakutils pyepics=3.3.3 pycifrw pyshortcuts
