--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -9,49 +9,20 @@ channels:
 
 specs:
     - python=3.6.8
-    - conda
-    - pip
-    - anaconda
-    - console_shortcut # [win]
     - setuptools
+    - pip
+    - conda
+    - anaconda
     - numpy>=1.15
     - scipy>=1.0
-    - pandas
-    - h5py
-    - hdf5
     - matplotlib>=3.0
-    - six>=1.10
-    - sqlalchemy
-    - pillow>=5.3
-    - psycopg2
+    - six>=1.12
     - termcolor
-    - fontconfig # [osx or linux64]
-    - pango # [linux64]
-    - pywin32 # [win64 or win32]
     - pcre
     - yaml
-    - pyyaml>=3.12
-    - requests
-    - scikit-image
-    - scikit-learn
-    - pycifrw>=4.3
-    - peakutils
+    - pyyaml
     - psutil
-    - silx>=0.9
-    - fabio>=0.6
-    - pyfai
-    - dioptas>=0.4.2gse
-    - tomopy>=1.3
-    - tifffile=0.14.0
-    - wxpython>=4.0.3
-    - wxmplot>=0.9.34
-    - pyepics>=3.3.3
-    - lmfit>=0.9.12
-    - asteval>=0.9.13
-    - wxutils>=0.2.3
-    - xraylarch>=0.9.41rc2
-
-installer_type: sh # [osx]
+    - requests
 
 post_install: post_install_linux.sh # [linux64]
 post_install: post_install_macosx.sh # [osx]
