stop testing with Python 2.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,10 @@ language: python
 sudo: false
 
 python:
-    - 2.7
     - 3.6
 
 before_install:
-    - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then wget http://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh ; fi
-    - if [[ $TRAVIS_PYTHON_VERSION != 2.7 ]]; then wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh ; fi
+    - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/xraylarch
     - export PATH="$HOME/xraylarch/bin:$PATH"
     - hash -r
