--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -1,5 +1,5 @@
 name:  xraylarch
-version: 0.9.41
+version: 0.9.42
 
 channels:
     - http://repo.continuum.io/pkgs/main
@@ -46,7 +46,13 @@ specs:
     - asteval
     - wxutils=0.2.3
     - wxmplot=0.9.34
-
+    - tomopy=1.3.0
+    - dioptas
+    - pyFAI>=0.16
+    - fabio
+    - silx
+    - tifffile
+    - xraylarch=0.9.42
 
 post_install: post_install_linux.sh # [linux64]
 post_install: post_install_macosx.sh # [osx]
