--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -38,7 +38,7 @@ specs:
     - python.app # [osx]
     - pywin32 # [win64]
     - console_shortcut # [win64]
-    - pycifrw  # [linux64 or osx]
+    - pycifrw
     - peakutils
     - pyshortcuts
     - pyepics=3.3.3
@@ -46,7 +46,9 @@ specs:
     - asteval
     - wxutils=0.2.3
     - wxmplot=0.9.34
-    - tomopy=1.3.0
+    - tomopy=1.3.0 # [linux64 or osx]
+    - qtpy 
+    - pyqtgraph
     - dioptas
     - pyFAI>=0.16
     - fabio
@@ -57,6 +59,8 @@ specs:
 post_install: post_install_linux.sh # [linux64]
 post_install: post_install_macosx.sh # [osx]
 post_install: post_install_windows.bat # [win]
+
+# installer_type: pkg  [osx]
 
 license_file: ../LICENSE
 welcome_image: larch_3cones.png          #        [win]
