--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -7,19 +7,33 @@ channels:
     - http://repo.continuum.io/pkgs/msys2 [win]
     - https://conda.anaconda.org/gsecars/
 
+welcome_image: larch_3cones.png   [win]
+
+license_file: ../LICENSE
+
+attempt_hardlinks: True
+
+installer_type: pkg [osx]
+
+post_install: post_install.sh [unix]
+post_install: post_install_windows.bat [win]
+
 specs:
-    - python=3.6.8
+    - python=>3.6.8
     - setuptools
     - pip
     - conda
+    - openssl
+    - asn1crypto
+    - readline
     - anaconda
     - numpy>=1.15
-    - scipy>=1.0
+    - scipy>=1.2
     - matplotlib>=3.0
     - six>=1.12
+    - yaml
     - termcolor
     - pcre
-    - yaml
     - pyyaml
     - psutil
     - requests
@@ -31,36 +45,27 @@ specs:
     - scikit-image
     - scikit-learn
     - pandas
-    - wxpython=4.0.4
-    - patchelf # [linux64]
-    - pango # [linux64]
-    - fontconfig # [linux64 or osx]
-    - python.app # [osx]
-    - pywin32 # [win64]
+    - patchelf         # [linux64]
+    - pango            # [linux64]
+    - fontconfig       # [linux64 or osx]
+    - python.app       # [osx]
+    - pywin32          # [win64]
     - console_shortcut # [win64]
+    - qtpy
+    - pyqtgraph
+    - wxpython>=4.0.4
     - pycifrw
     - peakutils
     - pyshortcuts
-    - pyepics=3.3.3
-    - lmfit=0.9.12
+    - pyepics>=3.3.3
+    - lmfit>=0.9.12
     - asteval
-    - wxutils=0.2.3
-    - wxmplot=0.9.34
-    - tomopy=1.3.0 # [linux64 or osx]
-    - qtpy 
-    - pyqtgraph
+    - wxutils>=0.2.3
+    - wxmplot>=0.9.34
+    - tomopy=1.3.0     # [linux64 or osx]
     - dioptas
-    - pyFAI>=0.16
+    - pyFAI>=0.17
     - fabio
     - silx
     - tifffile
     - xraylarch=0.9.42
-
-post_install: post_install_linux.sh # [linux64]
-post_install: post_install_macosx.sh # [osx]
-post_install: post_install_windows.bat # [win]
-
-# installer_type: pkg  [osx]
-
-license_file: ../LICENSE
-welcome_image: larch_3cones.png          #        [win]
