--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -1,5 +1,5 @@
 name:  xraylarch
-version: 0.9.42
+version: 0.9.43rc1
 
 channels:
     - http://repo.continuum.io/pkgs/main
@@ -19,7 +19,7 @@ post_install: post_install.sh [unix]
 post_install: post_install_windows.bat [win]
 
 specs:
-    - python=>3.6.8
+    - python=>3.7.2
     - setuptools
     - pip
     - conda
@@ -57,14 +57,14 @@ specs:
     - peakutils
     - pyshortcuts
     - pyepics>=3.3.3
-    - lmfit>=0.9.12
+    - lmfit>=0.9.13
     - asteval
     - wxutils>=0.2.3
     - wxmplot>=0.9.34
-    - tomopy=1.3.0     # [linux64 or osx]
+    - tomopy>=1.4.0     # [linux64 or osx]
     - dioptas
-    - pyFAI>=0.17
+    - pyFAI>=0.17.1
     - fabio
     - silx
     - tifffile
-    - xraylarch=0.9.42
+    - xraylarch>=0.9
