--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ sudo: false
 
 python:
     - 3.6
+    - 3.7-dev
 
 before_install:
     - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
@@ -16,13 +17,12 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n testlarch python=$TRAVIS_PYTHON_VERSION numpy scipy libgfortran matplotlib
+    - if [[ $TRAVIS_PYTHON_VERSION != 3.7-dev ]]; then conda create -q -n testlarch python=$TRAVIS_PYTHON_VERSION numpy scipy six pandas matplotlib h5py wxpython pip dill nose sphinx; fi
+    - if [[ $TRAVIS_PYTHON_VERSION == 3.7-dev ]]; then conda create -q -n testlarch python=3.7                    numpy scipy six pandas matplotlib h5py wxpython pip dill nose sphinx; fi
     - source activate testlarch
-    - conda install six pandas nose sphinx sqlalchemy psycopg2 wxpython pip six h5py pytest patchelf
-    - conda install pillow requests yaml pyyaml pango pcre psutil scikit-learn
+    - conda install sqlalchemy psycopg2 pytest patchelf pillow requests yaml pyyaml pango pcre psutil scikit-learn
     - conda config --add channels gsecars
-    - conda install -c gsecars uncertainties asteval lmfit=0.9.12 termcolor peakutils pyepics=3.3.3 pycifrw pyshortcuts
-    - conda install -c gsecars wxmplot=0.9.34 wxutils=0.2.3
+    - conda install -c gsecars uncertainties asteval lmfit termcolor peakutils pyepics pycifrw pyshortcuts wxmplot wxutils
     - python setup.py install
     - conda list
 
