--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 six>=1.10
-scipy>=0.17
+scipy>=0.19
 numpy>=1.10
-matplotlib>=2.0
+matplotlib>=3.0
 sqlalchemy>=0.9
-h5py>=2.7
+psycopg2
+h5py>=2.8
 scikit-learn>=0.18
 pillow>=3.4
 peakutils>=1.0.0
@@ -12,8 +13,11 @@ asteval>=0.9.12
 lmfit>=0.9.12
 uncertainties>=3.0.3
 pyshortcuts>=1.3
+pip
 pyyaml
 psutil
+nose
+pytest
 termcolor
 wxpython>=4.0.3
 wxutils>=0.2.3
