--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,8 +12,8 @@ install:
     - conda update conda
     - conda install python=%PYTHON_VERSION% --file requirements.txt
     - conda info -a
-    - "%PYTHON%\\python.exe setup.py install"
+    - python.exe setup.py install
 
 test_script:
     - cd tests
-    - "python -m pytest"
+    - python -m pytest
