--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,3 @@
-image: Visual Studio 2015
 
 environment:
   matrix:
@@ -12,6 +11,8 @@ install:
     - conda update conda
     - conda install python=%PYTHON_VERSION% --file requirements.txt
     - conda info -a
+
+build_script:
     - python.exe setup.py install
 
 test_script:
