--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,7 @@ install:
     - conda config --add channels gsecars
     - conda update conda
     - conda install python=%PYTHON_VERSION% --file requirements.txt
+    - activate base
     - conda info -a
 
 build_script:
