--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@
 # conda config --env --append channels conda-forge
 # conda config --env --append channels GSECARS
 # conda install --file ./requirements.txt
-scipy>=1.1
-numpy>=1.15
+scipy>=1.2
+numpy>=1.16
 matplotlib>=3.0
 sqlalchemy>=0.9
 psycopg2
@@ -12,18 +12,23 @@ h5py>=2.8
 pillow>=3.4
 peakutils>=1.0.0
 requests>=2.1
-asteval>=0.9.12
+scikit-learn
+asteval>=0.9.14
 lmfit>=0.9.13
 uncertainties>=3.0.3
 pyshortcuts>=1.3
+pyepics>=3.3
 pip
+dill
+yaml
 pyyaml
 psutil
 nose
 pytest
 termcolor
-wxpython>=4.0.2
+sphinx
+wxpython>=4.0.3
 wxutils>=0.2.3
-wxmplot>=0.9.34
-pyside2>=5.13
+wxmplot>=0.9.37
+pyside2>=5.12
 silx>=0.11
