--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,12 @@ before_install:
     - conda info -a
 
 install:
-    - conda create -q -n testlarch python=3.7 --file requirements.txt
-    - source activate testlarch
-    - conda install patchelf pango pcre pycifrw
-    - pip install pyside2
+    - conda create -q -n xlarch python=3.7 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
+    - source activate xlarch
+    - pip install dill nose peakutils pillow psutil psycopg2 pyepics pytest silx sphinx termcolor
+    - conda install -c gsecars asteval dioptas lmfit pycifrw pyfai pyshortcuts tomopy uncertainties wxutils wxmplot patchelf pango pcre
     - python setup.py install
     - conda list
-
 
 script:
     - cd tests
