--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,11 +10,9 @@ install:
     - conda config --add channels gsecars
     - conda update conda
     - conda info -a
-    - conda create -q -n xlarch python=3.7 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
-    - activate xlarch
-    - conda install asteval dioptas lmfit pycifrw pyfai pyshortcuts tomopy uncertainties wxutils wxmplot
+    - conda install python=3.7 numpy scipy matplotlib sqlalchemy requests pandas scikit-image scikit-learn h5py wxpython yaml pyyaml pip
     - pip install dill nose peakutils pillow psutil psycopg2 pyepics pytest silx sphinx termcolor
-
+    - conda install asteval dioptas lmfit pycifrw pyfai pyshortcuts tomopy uncertainties wxutils wxmplot
 
 build_script:
     - python.exe setup.py install
