update requirements file, expanding number of packages expected to be on PyPI

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,20 @@ scipy>=1.2
 numpy>=1.14
 matplotlib>=3.0
 sqlalchemy>=0.9
-psycopg2
 h5py>=2.8
 pillow>=3.4
 peakutils>=1.0.0
 requests>=2.1
+scikit-image
 scikit-learn
 asteval>=0.9.14
 lmfit>=0.9.13
-uncertainties>=3
-pyshortcuts>=1.3
+uncertainties>=3.0
+pyshortcuts>=1.4
+pyepics>=3.3.3
+wxpython>=4.0.3
+wxutils>=0.2.3
+wxmplot>=0.9.37
 pip
 dill
 pyyaml
@@ -24,7 +28,7 @@ nose
 pytest
 termcolor
 sphinx
-wxpython>=4.0.3
-wxutils>=0.2.3
-wxmplot>=0.9.37
 silx>=0.11
+pyfai
+pycifrw
+fabio
