--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -4,10 +4,12 @@ version: 0.9.46rc1
 channels:
     - https://repo.continuum.io/pkgs/main
     - https://repo.continuum.io/pkgs/msys2 [win]
+    - https://conda.anaconda.org/conda-forge/ [win]
     - https://conda.anaconda.org/gsecars/
 
 installer_type: pkg [osx]
 welcome_image: larch_3cones.png
+license_file: ../LICENSE
 attempt_hardlinks: True
 ignore_duplicate_files: True
 
