tweak requirements list and versions for consistent conda installs

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,24 +3,23 @@
 # conda config --env --append channels GSECARS
 # conda install --file ./requirements.txt
 scipy>=1.2
-numpy>=1.14
+numpy>=1.12
 matplotlib>=3.0
 sqlalchemy>=0.9
 h5py>=2.8
-pillow>=3.4
-peakutils>=1.0.0
-requests>=2.1
+pillow
+peakutils
+requests
 scikit-image
 scikit-learn
 asteval>=0.9.14
 lmfit>=0.9.13
 uncertainties>=3.0
 pyshortcuts>=1.4
+pyepics>=3.3.3
 wxpython>=4.0.3
 wxutils>=0.2.3
 wxmplot>=0.9.37
-pyepics>=3.3.3
-sphinx
 pip
 dill
 pyyaml
@@ -28,6 +27,8 @@ psutil
 nose
 pytest
 termcolor
+sphinx
 silx>=0.11
-pyfai
 fabio
+pyfai
+pycifrw
