--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -4,7 +4,6 @@ version: 0.9.46
 channels:
     - https://repo.continuum.io/pkgs/main
     - https://repo.continuum.io/pkgs/msys2 [win]
-    - https://conda.anaconda.org/conda-forge/ [win]
     - https://conda.anaconda.org/gsecars/
 
 installer_type: pkg [osx]
@@ -30,7 +29,6 @@ specs:
     - termcolor>=1.1.0
     - yaml
     - pyyaml
-
     - scipy>=1.2
     - numpy>=1.12
     - matplotlib>=3.0
@@ -63,7 +61,7 @@ specs:
     - asteval
     - wxutils
     - wxmplot
-    - tomopy
+    - tomopy    # [linux or osx]
     - silx>=0.11
     - pyFAI
     - fabio
