update dependency versions

--- a/conda_constructor/construct.yaml
+++ b/conda_constructor/construct.yaml
@@ -56,8 +56,8 @@ specs:
     - pycifrw
     - peakutils
     - pyshortcuts
-    - pyepics
-    - lmfit
+    - pyepics>=3.4.1
+    - lmfit>=1.0
     - asteval
     - wxutils
     - wxmplot
