--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,14 @@
 # List of larch development dependencies
 # Those ARE NOT required for installation, at runtime, or to build from source
-# but are required to build the documentation.   Install with :
-#    pip install -r ./requirements-devs.txt
+# but are required to build the documentation and contribute to development.
+# Install with :
+#   pip install -r ./requirements-dev.txt
 #  or
-#   conda install --file ./requirements-devs.txt
+#   conda install --file ./requirements-dev.txt
 pytest
 sphinx
 numpydoc
 sphinxcontrib-bibtex
 sphinxcontrib-argdoc
+flake8  #: linter (wrapper on top of +pyflakes, +pycodestyle and +mccabe)
+black  #: formatter (preferred over: yapf and autopep8)
